Add PlayerCard component
That component shows for each player how many cards they have.
Rename some functions
Move responsibility for adding open/route cards to the server
REFORMAT ALL THE CODE

--- a/src/main/resources/views/layout_game_cards.fxml
+++ b/src/main/resources/views/layout_game_cards.fxml
@@ -1,92 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<Pane xmlns:fx="http://javafx.com/fxml"
+<?import javafx.scene.layout.HBox?>
+<HBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="client.ui.controllers.LayoutCardController"
-      prefHeight="200" prefWidth="1080">
-    <HBox fx:id="cards" spacing="-30">
-        <VBox fx:id="black">
-            <Label fx:id="blackammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="blackimgv" rotate="90" fitHeight="127">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="blue">
-            <Label fx:id="blueammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="blueimgv" rotate="90">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="green">
-            <Label fx:id="greenammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="greenimgv" rotate="90">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="orange">
-            <Label fx:id="orangeammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="orangeimgv" rotate="90">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="purple">
-            <Label fx:id="purpleammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="purpleimgv" rotate="90">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="red">
-            <Label fx:id="redammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="redimgv" rotate="90">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="white">
-            <Label fx:id="whiteammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="whiteimgv" rotate="90">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="yellow">
-            <Label fx:id="yellowammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="yellowimgv" rotate="90">
-            </ImageView>
-        </VBox>
-
-        <VBox fx:id="locomotive">
-            <Label fx:id="locomotiveammount" minWidth="30" textFill="white"
-                   style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-                test
-            </Label>
-            <ImageView fx:id="locomotiveimgv" rotate="90">
-            </ImageView>
-        </VBox>
-    </HBox>
-</Pane>
+      prefHeight="200" prefWidth="1080" fx:id="cards" spacing="-30"/>
