--- a/src/main/resources/views/layout_full_game.fxml
+++ b/src/main/resources/views/layout_full_game.fxml
@@ -15,6 +15,8 @@
                 layoutY="194"/>
     <fx:include source="layout_game_bank.fxml" layoutX="16" layoutY="16"/>
     <fx:include source="layout_route_card_stack.fxml" layoutX="230" layoutY="680"/>
+    <fx:include source="layout_game_hand_routecards.fxml" layoutY="789" layoutX="1354"/>
+
     <fx:include source="layout_game_routecard.fxml" fx:id="initRouteCards"/>
 
     <!--Image Buttons-->
