--- a/src/main/resources/views/overlay_build_message.fxml
+++ b/src/main/resources/views/overlay_build_message.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Rectangle?>
 <StackPane xmlns:fx="http://javafx.com/fxml"
@@ -20,6 +19,7 @@
         <HBox fx:id="trainBox3" maxWidth="600" layoutX="50" layoutY="62" spacing="10"
               alignment="CENTER"/>
         <Label fx:id="locations" textFill="#FFF"/>
+        <Label fx:id="owner" textFill="#FFF"/>
         <Label fx:id="tunnelWarning" textFill="#FFF"/>
         <HBox alignment="CENTER" spacing="10">
             <Button text="Cancel" onMouseClicked="#closeAnimation"/>
