--- a/src/main/resources/views/component_player_card.fxml
+++ b/src/main/resources/views/component_player_card.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <fx:root xmlns:fx="http://javafx.com/fxml" type="VBox"
          xmlns="http://javafx.com/javafx"
-         style="-fx-font-family: monospace; -fx-font-weight: bolder; -fx-padding: 10">
-    <Label fx:id="amount" minWidth="30" textFill="black"/>
-    <ImageView fx:id="image" rotate="90" fitWidth="180" preserveRatio="true"/>
+         style="-fx-font-family: monospace; -fx-font-weight: bolder; -fx-padding: 10" prefHeight="200">
+        <Label fx:id="amount" minWidth="30" textFill="black" prefHeight="20"/>
+        <ImageView fx:id="image" rotate="90" fitWidth="160" preserveRatio="true"/>
 </fx:root>
