--- a/src/main/resources/views/layout_full_game.fxml
+++ b/src/main/resources/views/layout_full_game.fxml
@@ -10,10 +10,10 @@
       fx:id="rootPane" stylesheets="/css/defaultStyling.css">
 
     <fx:include source="layout_game_playerbox.fxml" layoutY="16" layoutX="230"/>
-    <fx:include source="layout_game_cards.fxml" layoutX="16" layoutY="864"/>
+    <fx:include source="layout_game_cards.fxml" fx:id="hand" layoutX="16" layoutY="864"/>
     <fx:include source="layout_routes_map.fxml" fx:id="routesMap" scaleX="1.3" scaleY="1.3" layoutX="843"
                 layoutY="194"/>
-    <fx:include source="layout_game_bank.fxml" layoutX="16" layoutY="16"/>
+    <fx:include source="layout_game_bank.fxml" fx:id="bank" layoutX="16" layoutY="16"/>
     <fx:include source="layout_route_card_stack.fxml" layoutX="230" layoutY="680"/>
     <fx:include source="layout_game_hand_routecards.fxml" layoutY="789" layoutX="1354"/>
 
