--- a/src/main/resources/views/layout_routes_map.fxml
+++ b/src/main/resources/views/layout_routes_map.fxml
@@ -14,5 +14,6 @@
         <Image url="/images/Background.png"/>
     </ImageView>
     <Pane fx:id="mainPane" prefWidth="1920" prefHeight="1080"/>
+    <Pane fx:id="locationPane" prefWidth="1920" prefHeight="1080"/>
     <Pane fx:id="informationPane" prefWidth="1920" prefHeight="1080"/>
 </Pane>
