--- a/src/main/resources/views/layout_lobby.fxml
+++ b/src/main/resources/views/layout_lobby.fxml
@@ -8,7 +8,8 @@
         xmlns="http://javafx.com/javafx"
         fx:controller="client.ui.views.LobbyController"
         prefHeight="1080.0" prefWidth="3020.0" alignment="CENTER"
-        spacing="20" style="-fx-background-color: #DDD">
+        spacing="20" style="-fx-background-color: #DDD" stylesheets="/css/defaultStyling.css">
+    <Label fx:id="ipAddress" styleClass="normal-label"/>
     <VBox fx:id="container" alignment="BASELINE_CENTER"/>
     <HBox prefWidth="1080" alignment="CENTER" spacing="10">
         <Label styleClass="fancy-label" fx:id="quitButtonLabel" text="Quit"/>
