Show IP when joining a lobby

--- a/src/main/resources/css/defaultStyling.css
+++ b/src/main/resources/css/defaultStyling.css
@@ -2,6 +2,10 @@
     src: url('/fonts/MavenPro-Medium.ttf');
 }
 
+Label, Text, Button {
+    -fx-font-smoothing-type: lcd;
+}
+
 Label {
     -fx-font-family: 'Maven Pro Medium';
     -fx-font-size: 14;
