--- a/src/main/resources/views/layout_messages.fxml
+++ b/src/main/resources/views/layout_messages.fxml
@@ -9,6 +9,7 @@
     <fx:include source="overlay_build_message.fxml" fx:id="routes"/>
     <fx:include source="overlay_train_card_message.fxml" fx:id="train"/>
     <fx:include source="overlay_route_card_message.fxml" fx:id="routeCards"/>
+    <fx:include source="overlay_not_players_turn_message.fxml" fx:id="notYourTurn"/>
 
 
 </StackPane>
