--- a/src/main/resources/views/overlay_not_players_turn_message.fxml
+++ b/src/main/resources/views/overlay_not_players_turn_message.fxml
@@ -4,15 +4,17 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
-<StackPane xmlns:fx="http://javafx.com/fxml"
-           xmlns="http://javafx.com/javafx"
-           fx:controller="client.ui.TrainCardMessageController"
-           prefHeight="600.0" prefWidth="1000.0"
-           fx:id="rootPane">
+<?import javafx.scene.text.Font?>
+<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0"
+           xmlns="http://javafx.com/javafx/8.0.121" fx:controller="client.ui.TrainCardMessageController">
 
-    <Rectangle width="1000" height="600" fill="#333" opacity="0.75" arcHeight="20" arcWidth="20"
-               style="-fx-background-color: #333"/>
-    <VBox alignment="BASELINE_CENTER" prefWidth="1000" prefHeight="600">
-        <Label text="It is not your turn!"/>
+    <Rectangle arcHeight="20" arcWidth="20" fill="#333" height="600" opacity="0.75" style="-fx-background-color: #333"
+               width="1000"/>
+    <VBox alignment="BASELINE_CENTER" prefHeight="600" prefWidth="1000">
+        <Label prefHeight="320.0" prefWidth="360.0" text="It is not your turn!" textFill="#FFF">
+            <font>
+                <Font size="41.0"/>
+            </font>
+        </Label>
     </VBox>
 </StackPane>
