--- a/src/main/resources/views/layout_messages.fxml
+++ b/src/main/resources/views/layout_messages.fxml
@@ -10,6 +10,7 @@
     <fx:include source="overlay_train_card_message.fxml" fx:id="train"/>
     <fx:include source="overlay_route_card_message.fxml" fx:id="routeCards"/>
     <fx:include source="overlay_not_players_turn_message.fxml" fx:id="notYourTurn"/>
+    <fx:include source="overlay_players_turn.fxml" fx:id="turn"/>
 
 
 </StackPane>
