Implement saving the game

--- a/src/main/resources/views/layout_save_menu.fxml
+++ b/src/main/resources/views/layout_save_menu.fxml
@@ -7,5 +7,5 @@
       prefHeight="400.0" prefWidth="600.0"
       stylesheets="/css/defaultStyling.css">
 
-    <Label styleClass="fancy-label" text="Save"/>
+    <Label styleClass="fancy-label" text="Save and Exit" fx:id="saveButton"/>
 </VBox>
