--- a/src/main/resources/views/layout_main_menu_load.fxml
+++ b/src/main/resources/views/layout_main_menu_load.fxml
@@ -13,5 +13,5 @@
     <ImageView fitWidth="550" preserveRatio="true">
         <Image url="/images/loadagame.png"/>
     </ImageView>
-    <Label styleClass="fancy-label" fx:id="loadLevelLabel" text="Load Level"/>
+    <Label styleClass="fancy-label" onMouseClicked="#onLoadButtonClicked" text="Load Level"/>
 </VBox>
