--- a/src/main/resources/views/layout_end_screen.fxml
+++ b/src/main/resources/views/layout_end_screen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -10,6 +11,17 @@
       style="-fx-background-color: linear-gradient(to bottom, #bfe8f9 0%,#0082ED 70%);">
     <HBox layoutX="560">
         <VBox translateY="37" spacing="225" fx:id="content"/>
-        <VBox fx:id="prizes"/>
+        <VBox fx:id="prizes">
+            <ImageView>
+                <Image url="/Prizes/Number_1.png"/>
+            </ImageView>
+            <ImageView>
+                <Image url="/Prizes/Number_2.png"/>
+            </ImageView>
+            <ImageView>
+                <Image url="/Prizes/Number_3.png"/>
+            </ImageView>
+        </VBox>
+
     </HBox>
 </Pane>
