--- a/src/main/resources/views/overlay_not_players_turn_message.fxml
+++ b/src/main/resources/views/overlay_not_players_turn_message.fxml
@@ -4,17 +4,13 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0"
            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="client.ui.dialogs.TrainCardMessageController">
 
-    <Rectangle arcHeight="20" arcWidth="20" fill="#333" height="600" opacity="0.75" style="-fx-background-color: #333"
-               width="1000"/>
+    <Rectangle arcHeight="20" arcWidth="20" fill="#333" height="200" opacity="0.75" style="-fx-background-color: #333"
+               width="300"/>
     <VBox alignment="BASELINE_CENTER" prefHeight="600" prefWidth="1000">
-        <Label prefHeight="320.0" prefWidth="360.0" text="It is not your turn!" textFill="#FFF">
-            <font>
-                <Font size="41.0"/>
-            </font>
-        </Label>
+        <Label prefHeight="320.0" prefWidth="360.0" text="It is not your turn!" textFill="#FFF"
+               style="-fx-font-size:41"/>
     </VBox>
 </StackPane>
