--- a/src/main/resources/views/layout_end_screen.fxml
+++ b/src/main/resources/views/layout_end_screen.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <Pane xmlns:fx="http://javafx.com/fxml"
@@ -9,19 +8,6 @@
       fx:controller="client.ui.controllers.LayoutEndScreen"
       prefHeight="1080.0" prefWidth="1920.0"
       style="-fx-background-color: linear-gradient(to bottom, #bfe8f9 0%,#0082ED 70%);">
-    <HBox layoutX="560">
-        <VBox translateY="37" spacing="225" fx:id="content"/>
-        <VBox fx:id="prizes">
-            <ImageView>
-                <Image url="/Prizes/Number_1.png"/>
-            </ImageView>
-            <ImageView>
-                <Image url="/Prizes/Number_2.png"/>
-            </ImageView>
-            <ImageView>
-                <Image url="/Prizes/Number_3.png"/>
-            </ImageView>
-        </VBox>
-
-    </HBox>
+    <VBox fx:id="playerList" spacing="20"/>
+    <Button text="Start" onMouseClicked="#onMouseClickedAction"/>
 </Pane>
