cleanup layout_full_game

--- a/src/main/resources/css/defaultStyling.css
+++ b/src/main/resources/css/defaultStyling.css
@@ -32,7 +32,7 @@ Slider:hover {
 }
 
 ImageView.imageButton:hover {
-    -fx-scale-x: 1.2px;
-    -fx-scale-y: 1.2px;
+    -fx-scale-x: 1.2;
+    -fx-scale-y: 1.2;
     -fx-cursor: hand;
 }
